# kinova-gen3-driver

./: CMakeLists.txt  README.md
apps/: benchmark_grav_comp.cpp
cmake/: aarch64-toolchain.cmake
docs/: integration-runbook.md  rt-tuning.md  rt-validation-results.md
docs/integration/: grav_comp_static_check.md
docs/superpowers/plans/: 2026-06-02-lowlevel-driver-skeleton.md
docs/superpowers/specs/: 2026-06-02-kinova-gen3-lowlevel-driver-design.md
include/kinova_lowlevel/: control_mode.h  dynamics.h  gravity_comp_mode.h  joint_types.h  kortex_transport.h  rt_executor.h  rt_system.h  sim_transport.h  telemetry.h  telemetry_consumers.h  transport.h  units.h
models/: gen3_7dof_2f85.urdf
scripts/: build_on_abra.sh  rt_grant_once.sh  rt_setup.sh  sync_to_abra.sh
src/: dynamics.cpp  gravity_comp_mode.cpp  kortex_transport.cpp  rt_executor.cpp  rt_system.cpp  sim_transport.cpp  telemetry.cpp  telemetry_consumers.cpp
tests/: dynamics_test.cpp  gravity_comp_mode_test.cpp  joint_types_test.cpp  rt_safety_test.cpp  rt_system_test.cpp  sim_transport_test.cpp  smoke_test.cpp  telemetry_test.cpp
